--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
+    "muicss": "^0.9.4",
     "path": "^0.12.7",
     "pg-promise": "^5.2.7",
-    "react-color": "^2.8.0"
+    "react-color": "^2.8.0",
+    "react-drop-down": "^1.0.2"
   },
   "devDependencies": {
     "babel": "^6.5.2",
